end of afternoon portion

--- a/day02-intro-to-html/index.html
+++ b/day02-intro-to-html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 class="text-red">Job Application Tracker</h1>
-  <div class="text-center">
+  <div class="text-center btn-container">
     <button class="btn">Click Me!</button>
   </div>
 
@@ -33,13 +33,15 @@
         alt="Aha! company logo" 
         class="j-desc__company-image"
       >
-      <h2 class="j-desc__job-title">Ruby on Rails Engineer</h2>
-      <p class="j-desc__company">Aha!</p>
-      <ul class="j-desc__metadata">
-        <li class="j-desc__location">Chicago, IL (Remote)</li>
-        <li class="j-desc__salary">$100k/yr - $160k/yr</li>
-        <li class="j-desc__posting_date">1 week ago</li>
-      </ul>
+      <div class="j-desc__details">
+        <h2 class="j-desc__job-title">Ruby on Rails Engineer</h2>
+        <p class="j-desc__company">Aha!</p>
+        <ul class="j-desc__metadata">
+          <li class="j-desc__location">Chicago, IL (Remote)</li>
+          <li class="j-desc__salary">$100k/yr - $160k/yr</li>
+          <li class="j-desc__posting_date">1 week ago</li>
+        </ul>
+      </div>
     </div>
     <div class="j-desc">
       <img 
@@ -47,13 +49,15 @@
         alt="Cal State Long Beach Logo" 
         class="j-desc__company-image"
       >
-      <h2 class="j-desc__job-title">Junior Software Developer</h2>
-      <p class="j-desc__company">California State University, Long Beach</p>
-      <ul class="j-desc__metadata">
-        <li class="j-desc__location">Long Beach, CA (onsite)</li>
-        <li class="j-desc__salary">$3,713/m - $7,149/m</li>
-        <li class="j-desc__posting_date">5 days ago</li>
-      </ul>
+      <div class="j-desc__details">
+        <h2 class="j-desc__job-title">Junior Software Developer</h2>
+        <p class="j-desc__company">California State University, Long Beach</p>
+        <ul class="j-desc__metadata">
+          <li class="j-desc__location">Long Beach, CA (onsite)</li>
+          <li class="j-desc__salary">$3,713/m - $7,149/m</li>
+          <li class="j-desc__posting_date">5 days ago</li>
+        </ul>
+      </div>
     </div>
     <div class="j-desc">
       <img 
@@ -61,13 +65,15 @@
         alt="Jobot company logo" 
         class="j-desc__company-image"
       >
-      <h2 class="j-desc__job-title">Remote Wordpress Developer</h2>
-      <p class="j-desc__company">Jobot</p>
-      <ul class="j-desc__metadata">
-        <li class="j-desc__location">Malibu, CA (Hybrid)</li>
-        <li class="j-desc__salary">$50/hr - $75/hr</li>
-        <li class="j-desc__posting_date">1 week ago</li>
-      </ul>
+      <div class="j-desc__details">
+        <h2 class="j-desc__job-title">Remote Wordpress Developer</h2>
+        <p class="j-desc__company">Jobot</p>
+        <ul class="j-desc__metadata">
+          <li class="j-desc__location">Malibu, CA (Hybrid)</li>
+          <li class="j-desc__salary">$50/hr - $75/hr</li>
+          <li class="j-desc__posting_date">1 week ago</li>
+        </ul>
+      </div>
     </div>
   </section>
 </body>
